--- a/src/styles/layout/_contact.scss
+++ b/src/styles/layout/_contact.scss
@@ -34,7 +34,7 @@
     }
     &__info-box {
         color: red;
-        background: url('./../../images/contact-min.png') no-repeat;
+        background: url('./../../public/images/contact-min.png') no-repeat;
         background-clip: content-box;
         background-size: contain;
         background-position: center center;
