--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -39,9 +39,21 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 2.6rem;
-        font-style: italic;
-        color: var(--color-blue-1);
+
+        &-link {
+            font-size: 2.6rem;
+            font-style: italic;
+            text-decoration: none;
+            
+            &:link,
+            &:visited { 
+                color: var(--color-blue-1);
+             }
+            &:hover,
+            &:active { 
+                color: var(--color-white);
+            }
+        }
     }
 
     &__switcher {
