--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -107,3 +107,18 @@
     font-weight: 600;
     color: var(--color-blue-4);
 }
+
+.link {
+    text-decoration: none;
+    transition: color .3s;
+
+    &:link,
+    &:visited {
+        color: var(--color-blue-4); 
+    }
+
+    &:hover,
+    &:active {
+        color: var(--color-blue-5);
+    }
+}
